@@ -1,3 +1,8 @@
+2003-09-26  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/devel/packaging.html: Add note about broken DOS/Windows
+	command line.
+
 2003-09-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* site/download/windows.html: rewrite 
